--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -108,6 +108,17 @@ jobs:
       asset-name: 'docker-ubuntu-22_04'
     secrets: inherit
 
+  
+  test-ecl-bundle-regression-docker-ubuntu-22_04:
+    if: ${{ contains('pull_request,push', github.event_name) }}
+    needs: build-docker-ubuntu-22_04
+    uses: ./.github/workflows/test-ecl-bundle-regression.yml
+    with:
+      os: ubuntu-22.04
+      asset-name: 'docker-ubuntu-22_04'
+    secrets: inherit
+
+
   test-ui-docker-ubuntu-22_04:
     if: ${{ contains('pull_request,push', github.event_name) }}
     needs: build-docker-ubuntu-22_04
